2016-04-18  Charlie Zender  <zender@uci.edu>

	* Turn-off dysfunctional legible (lgb) print-formatting until it works

	* Coordinate cell_methods with climatology bounds

	* Copy missing calendar to temporal bounds so ncdump -t prints correct date

2016-04-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta02 final changes';git push
	git tag -a 4.6.0-beta02 -m 'Version 4.6.0-beta02 new features: ncclimo, climatology bounds';git push --tags

	* Copy missing units to temporal bounds so ncdump -t prints correct date

2016-04-16  Charlie Zender  <zender@uci.edu>

	* Work on climatology_bounds for ACME...

2016-04-15  Henry Butowsky  <henryb@hush.com>

	* Modify out() and assign() so ASSIGN familiy of operands and '++', -- operands a value is returned only if needed

	* Fix bug introduced in 4.5.4: Regular assign statements in two-parse operations did not propagate missing values from RHS to LHS. Following test now works ncap2 -v -O -S gsl_sf.in in.nc foo.nc

2016-04-12  Charlie Zender  <zender@uci.edu>

	* Print blank line after global attributes in CDL mode in nco_prn_att()

2016-04-08  Henry Butowsky  <henryb@hush.com>

	* Modify ncap_var_var_op() and ncap_var_var_inc() so two operand functions need not stretch or conform scalars

2016-04-07  Charlie Zender  <zender@uci.edu>

	* Split cori from edison binary locations to allow for different system libraries

2016-04-06  Charlie Zender  <zender@uci.edu>

	* Add skeleton structure to implement climatology_bnds convention in ncra

2016-04-04  Charlie Zender  <zender@uci.edu>

	* Clarify ncks -H documentation, say clearly that it toggles

2016-04-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta01 final changes';git push
	git tag -a 4.6.0-beta01 -m 'Version 4.6.0-beta01 new features: Terraref works well';git push --tags
